Add support for multiple examples in schema
